fer-de-lance/tests/negative/vec_bounds.snek
(let* ((lst (vec 10 20 30))) (vec-get lst 5))
